phase 6 and 7 complete Activity,Hardening,Test,Docker